[package]
name = "test"
version = "0.1.0"
description = "Test app"
authors = ["Florian RICHER (MrDev023) <florian.richer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.13"
vulkano-win = "0.13"
vulkano-shaders = "0.13"
winit = "0.19"

[package.metadata.bundle]
identifier = "fr.mrdev023.test"
copyright = "Copyright (c) Florian RICHER (MrDev023) 2019. All rights reserved."

[package.metadata.android]
package_name = "com.author-name.my-android-app"
label = "My Android App"
fullscreen = false
build_targets = [ "arm-linux-androideabi", "armv7-linux-androideabi" ]

[package.metadata.android.application_attributes]
"android:debuggable" = "true"
"android:hardwareAccelerated" = "true"

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "unspecified"
"android:uiOptions" = "none"